# data-extractions-from-api

./: README.md  data-extraction-api-code.ipynb  pyproject.toml
data-from-api/: data-extraction-api-code.ipynb  data-extraction-from-api.md
