[tool.poetry]
name = "data-extractions-from-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.13.0"
requests = "^2.27.1"
pandas = "^1.4.2"
urllib3 = "^1.26.9"
fastparquet = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
